TEST_PROGRAMS/typing_benchmarks/valid/casts.go
package main

func main() {
	type t int
	var k int
	var x int = 5
	var y t 
	var z t
	z= t(x)
	println(y)
}
