TEST_PROGRAMS/typing_benchmarks/invalid/print3.go
package main

func main() {
	var p [5]int
	println(p)
}
